--- a/hotelpage.html
+++ b/hotelpage.html
@@ -9,8 +9,8 @@
     <header class="main-header">
       <a class="logo" href="index.html">
             <img src="#" alt="Sedona">
-      <nav>
-        <ul class="menu">
+      <nav class="main-nav">
+        <ul>
           <li>
             <a href="#">Информация</a>
           </li>
@@ -27,121 +27,133 @@
       </nav>
     </header>
     <main>
-      <section class="filter">
-        <form action="#" method="get" class="filter-category">
-          <p class="filter-title">Инфраструктура:</p>
-          <p><input type="checkbox" id="infrastr-1" name="pool" value="pool" checked>
+        <form action="#" method="get" class="filter">
+          <div class="filter-group">
+            <b class="filter-title">Инфраструктура:</b>
+            <input type="checkbox" id="pool" name="pool" value="pool" checked>
             <label for="infrastr-1">Бассейн</label>
-          </p>
-          <p><input type="checkbox" id="infrastr-2" name="parking" value="parking">
+            <input type="checkbox" id="parking" name="parking" value="parking">
             <label for="infrastr-2">Парковка</label>
-          </p>
-          <p><input type="checkbox" id="infrastr-3" name="wifi" value="wifi">
+            <input type="checkbox" id="wifi" name="wifi" value="wifi">
             <label for="infrastr-3">Wi-fi</label>
-          </p>
-        </form>
-        <form action="#" method="get" class="filter-category">
-          <p class="filter-title">Тип жилья:</p>
-          <p><input type="checkbox" id="type-1" name="hotel" value="hotel" checked>
+            <b class="filter-title">Тип жилья:</b>
+            <input type="checkbox" id="hotel" name="hotel" value="hotel" checked>
             <label for="type-1">Гостиница</label>
-          </p>
-          <p><input type="checkbox" id="type-2" name="motel" value="motel" checked>
+            <input type="checkbox" id="motel" name="motel" value="motel" checked>
             <label for="type-2">Мотель</label>
-          </p>
-          <p><input type="checkbox" id="type-3" name="apartments" value="apartments" checked>
+            <input type="checkbox" id="apartments" name="apartments" value="apartments" checked>
             <label for="type-3">Апартаменты</label>
-          </p>
-        </form>
-        <div class="filter-price">
-          <p class="filter-title price">Стоимость в сутки (р):</p>
-            <div class="filter-price-slider">
-              <div class="price-control">
-                <p class="price-from"><label for="price-from">от</label>
-                  <input class="min-price" id="price-from" type="number" value="0" min="0" max="5000">
-                </p>
-                <p class="price-to"><label for="price-to">до</label>
-                  <input class="max-price" id="price-to" type="number" value="3000" min="0" max="5000">
-                </p>
-              </div>
-              <div class="range-control">
-                <div class="scale">
-                  <div class="bar"></div>
-                </div>
-                  <div class="toggle min-toggle"></div>
-                  <div class="toggle max-toggle"></div>
-              </div>
-             </div>
           </div>
-        </section>
-        <section class="filter-sort">
-		      <h2>Найдено: 3</h2><p>Сортировка:</p>
-      		<a href="#" class="price">По цене</a>
-      		<a href="#" class="type">По типу</a>
-      		<a href="#" class="rating">По рейтингу</a>
-      		<div class="arrow">
-      			<a href="#"><i class="icon-up"></i></a>
-      			<a href="#"><i class="icon-down"></i></a>
+        <div class="filter-cost">
+          <label>от <input class="filter-field field-min" type="text" value="0"></label>
+          <label>до <input class="filter-field field-max" type="text" value="3000"></label>
+        </div>
+        <div class="range-controls">
+          <div class="toggle min-toggle"></div>
+          <div class="toggle max-toggle"></div>
+        </div>
+        <button type="submit" class="btn-filter">Показать</button>
+      </form>
+        <div class="sort">
+		      <b class="sort-title">Найдено: 3</b>
+          <div class="sort-label">Сортировка:</div>
+      		<div class="sort-by">
+            <a href="#">По цене</a>
+      		  <a href="#">По типу</a>
+      		  <a href="#">По рейтингу</a>
+        </div>
+      		<div class="sort-arrows">
+      			<a href="#" class="icon-triangle icon-up"></a>
+      			<a href="#" class="icon-triangle icon-down"></a>
       		</div>
       	</section>
-      	<section class="result">
-      			<img src="№" width="" height="" alt="Amara Resort & Spa">
-      			<h2>Amara Resort & Spa</h2>
-      			<p>Гостиница</p>
-      			<p>от 4000 р.</p>
-      			<a href="#" class="details">Подробнее</a>
-      			<a href="#" class="book">Забронировать</a>
-
-      			<div class="result-rating">
-      				<div class="star">
-      					<i class="icon-star" align="right"></i>
-      					<i class="icon-star" align="right"></i>
-      					<i class="icon-star" align="right"></i>
-      					<i class="icon-star" align="right"></i>
-      				</div>
-      				<span id="rating">Рейтинг: 8,5</span>
-      			</div>
+      	<section class="hotels">
+      			<article class="hotel-item">
+              <div class="hotel-image">
+                <img src="№" width="" height="" alt="Amara Resort &amp; Spa">
+              </div>
+              <div class="hotel-info">
+      			    <a href=# class="hotel-title">Amara Resort &amp; Spa</a>
+      			    <div class="hotel-info-part">
+                  <p>Гостиница</p>
+                  <a href="#" class="hotel-info-link">Подробнее</a>
+                </div>
+                <div class="hotel-info-part">
+      			      <p>от 4000 р.</p>
+      			      <a href="#" class="hotel-info-link link-dark">Забронировать</a>
+                </div>
+              </div>
+              <div class="hotel-rating">
+      				  <div class="hotel-stars">
+      				  </div>
+              <div class="hotel-rating-count">
+      				  <span>Рейтинг: 8,5</span>
+              </div>
+      			  </div>
+            </article>
       		</section>
-      		<section class="result">
-      			<img src="#" width="135" height="90" alt="Desert Quail Inn">
-      			<h2>Desert Quail Inn</h2>
-      			<p>Мотель</p>
-      			<p>от 3000 р.</p>
-      			<a href="#" class="details">Подробнее</a>
-      			<a href="#" class="book">Забронировать</a>
-      			<div class="result-rating">
-      				<div class="star">
-      					<i class="icon-star" align="right"></i>
-      					<i class="icon-star" align="right"></i>
-                <i class="icon-star" align="right"></i>
-      				</div>
-      				<span id="rating">Рейтинг: 8,9</span>
-      			</div>
+      		<section class="hotels">
+            <article class="hotel-item">
+      			  <div class="hotel-image">
+                <img src="#" width="135" height="90" alt="Desert Quail Inn">
+              </div>
+                <div class="hotel-info">
+      			      <a href=# class="hotel-title">Desert Quail Inn</a>
+                  <div class="hotel-info-part">
+      			        <p>Мотель</p>
+                    <a href="#" class="hotel-info-link">Подробнее</a>
+                  </div>
+                  <div class="hotel-info-part">
+      			        <p>от 3000 р.</p>
+      			        <a href="#" class="hotel-info-link link-dark">Забронировать</a>
+                  </div>
+                </div>
+                <div class="hotel-rating">
+      				    <div class="hotel-stars">
+      				    </div>
+                  <div class="hotel-rating-count">
+      				      <span>Рейтинг: 8,9</span>
+      			      </div>
+                </div>
+            </article>
       		</section>
-      		<section class="result">
-      			<img src="#" width="135" height="90" alt="Villas at Poco Diablo">
-      			<h2>Villas at Poco Diablo</h2>
-      			<p>Апартаменты</p>
-      			<p>от 2000 р.</p>
-      			<a href="#" class="details">Подробнее</a>
-      			<a href="#" class="book">Забронировать</a>
-      			<div class="result-rating">
-      				<div class="star">
-      					<i class="icon-star" align="right"></i>
-      					<i class="icon-star" align="right"></i>
-      				</div>
-      				<span id="rating">Рейтинг: 9,2</span>
-      			</div>
+      		<section class="hotels">
+            <article class="hotel-item">
+      			  <div class="hotel-image">
+                <img src="#" width="135" height="90" alt="Villas at Poco Diablo">
+      		  	</div>
+              <div class="hotel-info">
+                <a href=# class="hotel-title">Villas at Poco Diablo</a>
+                <div class="hotel-info-part">
+      			      <p>Апартаменты</p>
+                  <a href="#" class="hotel-info-link">Подробнее</a>
+                </div>
+                <div class="hotel-info-part">
+      			      <p>от 2000 р.</p>
+      			      <a href="#" class="hotel-info-link link-dark">Забронировать</a>
+                </div>
+              </div>
+      			  <div class="hotel-rating">
+      			  	<div class="hotel-stars">
+      				  </div>
+                <div class="hotel-rating-count">
+      				    <span>Рейтинг: 9,2</span>
+      			    </div>
+              </div>
+            </article>
       		</section>
       	</main>
-        <footer class="main-footer">
-          <a href="#" class="hashtag">#visitsedona</a>
-          <div class="social">
-            <a class="social-btn social-btn-tw" href="#">Твиттер</a>
-            <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-            <a class="social-btn social-btn-ytube" href="#">Ютуб</a>
-          </div>
-          <div class="copyright">
-            <p>website by<a href="#"></a>for<a href="#"</a></p>
+        <footer>
+          <div class="footer-inner">
+            <a href="#" class="hashtag">#visitsedona</a>
+            <div class="social">
+              <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+              <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
+              <a class="social-btn social-btn-ytube" href="#">Ютуб</a>
+            </div>
+            <div class="copyright">
+              <p>website by<a href="#"></a>for<a href="#"</a></p>
+            </div>
           </div>
         </footer>
       </div>
