--- a/hotels.html
+++ b/hotels.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <main>
-        <form action="#" method="get" class="filter">
+        <form action="/echo" method="get" class="filter">
           <div class="filter-group">
             <b class="filter-title">Инфраструктура:</b>
             <input type="checkbox" id="pool" name="pool" value="pool" checked>
@@ -36,6 +36,8 @@
             <label for="infrastr-2">Парковка</label>
             <input type="checkbox" id="wifi" name="wifi" value="wifi">
             <label for="infrastr-3">Wi-fi</label>
+          </div>
+          <div class="filter-group">
             <b class="filter-title">Тип жилья:</b>
             <input type="checkbox" id="hotel" name="hotel" value="hotel" checked>
             <label for="type-1">Гостиница</label>
@@ -84,11 +86,8 @@
                 </div>
               </div>
               <div class="hotel-rating">
-      				  <div class="hotel-stars">
-      				  </div>
-              <div class="hotel-rating-count">
-      				  <span>Рейтинг: 8,5</span>
-              </div>
+      				  <div class="hotel-stars"></div>
+                <div class="hotel-rating-count">Рейтинг: 8,5</div>
       			  </div>
             </article>
       		</section>
@@ -109,11 +108,8 @@
                   </div>
                 </div>
                 <div class="hotel-rating">
-      				    <div class="hotel-stars">
-      				    </div>
-                  <div class="hotel-rating-count">
-      				      <span>Рейтинг: 8,9</span>
-      			      </div>
+      				    <div class="hotel-stars"></div>
+                  <div class="hotel-rating-count">Рейтинг: 8,9</div>
                 </div>
             </article>
       		</section>
@@ -134,18 +130,15 @@
                 </div>
               </div>
       			  <div class="hotel-rating">
-      			  	<div class="hotel-stars">
-      				  </div>
-                <div class="hotel-rating-count">
-      				    <span>Рейтинг: 9,2</span>
-      			    </div>
+      			  	<div class="hotel-stars"></div>
+                <div class="hotel-rating-count">Рейтинг: 9,2</div>
               </div>
             </article>
       		</section>
       	</main>
         <footer>
           <div class="footer-inner">
-            <a href="#" class="hashtag">#visitsedona</a>
+            <div class="hashtag">#visitsedona</div>
             <div class="social">
               <a class="social-btn social-btn-tw" href="#">Твиттер</a>
               <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
