--- a/index.html
+++ b/index.html
@@ -1,12 +1,151 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Sedona</title>
+</head>
+<body>
+  <div class="container">
+    <header class="main-header">
+      <div class="logo" href="index.html">
+        <img src="#" width="" height="" alt="Sedona">
+      </div>
+      <nav class="main-nav">
+        <ul>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Фото и видео</a>
+          </li>
+          <li>
+            <a href="#">Карта штата</a>
+          </li>
+          <li>
+            <a href="#">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="intro">
+        <img src="#" width="" height="" alt="Welcome to Sedona"/>
+      </div>
+      <h1 class="main-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+	  	<p>Рассмотрим 5 причин, по которым Седона круче чем Гранд каньон!</p>
+      <div class="benefits">
+        <div class="benefits-text">
+          <h2 class="benefits-title">Настоящий городок</h2>
+          <span>&ndash;1&ndash;</span>
+          <p>Седона не атракцион для туристов, там течет своя жизнь</p>
+        </div>
+        <div class="benefits-image">
+          <img src="#" width="" height="" alt="Настоящий городок">
+        </div>
+        </div>
+        <div class="features">
+          <div class="feautures-item">
+            <img src="#" width="" height="" alt="Жильё">
+            <h2 class="feautures-title feautures-title-house">Жилье</h2>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </div>
+          <div class="feautures-item">
+            <img src="#"width="" height=""  alt="Еда">
+            <h2 class="feature-title feautures-title-food">Еда</h2>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруйетесь!</p>
+          </div>
+          <div class="feautures-item">
+            <img src="#" width="" height="" alt="Сувениры">
+            <h2 class="feature-title feautures-title-souvenir">Сувениры</h2>
+            <p>Не только китайского, но и местного производства!</p>
+          </div>
+        </div>
+        <div class="benefits">
+          <div class="benefits-image">
+            <img src="#" width="" height="" alt="Мост дьявола">
+          </div>
+          <div class="benefits-text">
+            <h2 class="benefits-title">Там есть мост дьявола</h2>
+            <span>&ndash;&#8470;2&ndash;</span>
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </div>
+        </div>
+        <div class="benefits">
+          <div class="feature-text">
+            <h2 class="feature-title">Небольшая площадь</h2>
+            <span class="feature-num">&ndash;&#8470;3&ndash;</span>
+            <p class="feature-desc">Все достопремечательности находятся очень близко</p>
+          </div>
+        </div>
+        <div class="benefits">
+          <div class="feature-text">
+           <h2 class="feature-title">Красивая дорога</h2>
+           <span class="feature-num">&ndash;&#8470;4&ndash;</span>
+           <p class="feature-desc">Ехать в Седону из Лас-вегаса совсем не скучно!</p>
+          </div>
+        </div>
+        <div class="benefits">
+          <div class="feature-text">
+           <p class="feature-title">Мало туристов</p>
+           <span class="feature-num">&ndash;&#8470;5&ndash;</span>
+           <p class="feature-desc">Большинство едет в Гранд Каньон и толпится там</p>
+          </div>
+          </div>
+          <div class="offer">
+				    <b class="offer-title">Заинтересовались?</b>
+				    <p>Укажите предполагаемые даты поездки,<br>и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+				    <a href="#" class="offer-btn btn">Поиск гостиницы в Седоне</a>
+			    </div>
+          <footer>
+			      <div class="map"></div>
+					  <form class="hotel-search" action="/echo" method="get">
+						<div class="hotel-search-row">
+							<label for="ch1">Дата заезда: <i class="icon-calendar"></i></label>
+              <div class="filed-wrapper">
+                <input name="checkin" type="date" placeholder="24 апреля 2014" id="ch1"/>
+                <button class="icon-calendar"></button>
+              </div>
+            </div>
+						<div class="hotel-search-row">
+              <label for="ch2">Дата выезда: <i class="icon-calendar"></i></label>
+              <div class="filed-wrapper">
+                <input name="checkout" type="date" placeholder="4 июля 2014" id="ch2"/>
+                <button class="icon-calendar"></button>
+              </div>
+            </div>
+            <div class="hotel-search-row">
+						  <div class="field-wrapper-half">
+                <div class="hotel-search-number">
+								  <label for="ch3">Взрослые:</label>
+									<button class="btn-grey icon-minus" type="button"></button>
+									<input name="adults" type="text" value="2" id="ch3"/>
+									<button class="btn-grey icon-plus" type="button"></button>
+								</div>
+							</div>
+              <div class="field-wrapper-half">
+                <div class="hotel-search-number">
+							    <label for="ch4">Дети:</label>
+								  <button class="btn icon-minus" type="button"></button>
+								  <input name="children" type="text" value="0" id="ch4"/>
+								  <button class="btn icon-plus" type="button"></button>
+							  </div>
+              </div>
+					  </div>
+						<button class="form-btn btn-search" type="submit">Найти</button>
+					  </form>
+            </div>
+				<div class="footer-index">
+					<div class="hashtag">#visitsedona</div>
+					<div class="social">
+            <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+            <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
+            <a class="social-btn social-btn-ytube" href="#">Ютуб</a>
+					</div>
+					<div class="copyright">
+            <p>website by<a href="#"></a>for<a href="#"</a></p>
+          </div>
+        </div>
+			</footer>
+		</div>
+	</body>
 </html>
