--- a/hotels.html
+++ b/hotels.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Sedona</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <header class="main-header">
       <a class="logo" href="index.html">
-            <img src="#" alt="Sedona">
+            <img src="img/logo.png" width="138" height="70" alt="Sedona">
       <nav class="main-nav">
         <ul>
           <li>
@@ -72,7 +73,7 @@
       	<section class="hotels">
       			<article class="hotel-item">
               <div class="hotel-image">
-                <img src="№" width="" height="" alt="Amara Resort &amp; Spa">
+                <img src="img/hotel-image.jpg" width="135" height="90" alt="Amara Resort &amp; Spa">
               </div>
               <div class="hotel-info">
       			    <a href=# class="hotel-title">Amara Resort &amp; Spa</a>
@@ -94,7 +95,7 @@
       		<section class="hotels">
             <article class="hotel-item">
       			  <div class="hotel-image">
-                <img src="#" width="135" height="90" alt="Desert Quail Inn">
+                <img src="img/hotel-image-2.jpg" width="135" height="90" alt="Desert Quail Inn">
               </div>
                 <div class="hotel-info">
       			      <a href=# class="hotel-title">Desert Quail Inn</a>
@@ -116,7 +117,7 @@
       		<section class="hotels">
             <article class="hotel-item">
       			  <div class="hotel-image">
-                <img src="#" width="135" height="90" alt="Villas at Poco Diablo">
+                <img src="img/hotel-image-3.jpg" width="135" height="90" alt="Villas at Poco Diablo">
       		  	</div>
               <div class="hotel-info">
                 <a href=# class="hotel-title">Villas at Poco Diablo</a>
@@ -140,12 +141,22 @@
           <div class="footer-inner">
             <div class="hashtag">#visitsedona</div>
             <div class="social">
-              <a class="social-btn social-btn-tw" href="#">Твиттер</a>
-              <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-              <a class="social-btn social-btn-ytube" href="#">Ютуб</a>
-            </div>
-            <div class="copyright">
-              <p>website by<a href="#"></a>for<a href="#"</a></p>
+              <a class="social-btn social-btn-tw" href="#">
+                <img src="img/icon-tw.png" width="17" height="15" alt="Твиттер">
+              </a>
+              <a class="social-btn social-btn-fb" href="#">
+                <img src="img/icon-fb.png" width="10" height="19" alt="Фейсбук">
+              </a>
+              <a class="social-btn social-btn-ytube" href="#">
+                <img src="img/icon-ytube.png" width="20" height="16" alt="Ютуб">
+              </a>
+  					</div>
+  					<div class="copyright">
+              <p>website by
+                <a href="#">
+                  <img src="img/icon-academy.png" width="113" height="39" alt="HTML-academy">
+                </a>
+              </p>
             </div>
           </div>
         </footer>
