--- a/hotels.html
+++ b/hotels.html
@@ -141,15 +141,9 @@
           <div class="footer-inner">
             <div class="hashtag">#visitsedona</div>
             <div class="social">
-              <a class="social-btn social-btn-tw" href="#">
-                <img src="img/icon-tw.png" width="17" height="15" alt="Твиттер">
-              </a>
-              <a class="social-btn social-btn-fb" href="#">
-                <img src="img/icon-fb.png" width="10" height="19" alt="Фейсбук">
-              </a>
-              <a class="social-btn social-btn-ytube" href="#">
-                <img src="img/icon-ytube.png" width="20" height="16" alt="Ютуб">
-              </a>
+              <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+              <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+              <a class="social-btn social-btn-ytube" href="#">Ютуб</a>
   					</div>
   					<div class="copyright">
               <p>website by
