--- a/index (2).html
+++ b/index (2).html
@@ -46,17 +46,14 @@
         </div>
         <div class="features">
           <div class="feautures-item">
-            <img src="img/icon-house.png" width="75" height="72" alt="Жильё">
             <h2 class="feautures-title feautures-title-house">Жилье</h2>
             <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </div>
           <div class="feautures-item">
-            <img src="img/icon-food.png"width="74" height="70"  alt="Еда">
             <h2 class="feature-title feautures-title-food">Еда</h2>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруйетесь!</p>
           </div>
           <div class="feautures-item">
-            <img src="img/icon-souvenir.png" width="64" height="76" alt="Сувениры">
             <h2 class="feature-title feautures-title-souvenir">Сувениры</h2>
             <p>Не только китайского, но и местного производства!</p>
           </div>
@@ -140,15 +137,9 @@
 				<div class="footer-index">
 					<div class="hashtag">#visitsedona</div>
 					<div class="social">
-            <a class="social-btn social-btn-tw" href="#">
-              <img src="img/icon-tw.png" width="17" height="15" alt="Твиттер">
-            </a>
-            <a class="social-btn social-btn-fb" href="#">
-              <img src="img/icon-fb.png" width="10" height="19" alt="Фейсбук">
-            </a>
-            <a class="social-btn social-btn-ytube" href="#">
-              <img src="img/icon-ytube.png" width="20" height="16" alt="Ютуб">
-            </a>
+            <a class="social-btn social-btn-tw" href="#"Твиттер</a>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+            <a class="social-btn social-btn-ytube" href="#">Ютуб</a>
 					</div>
 					<div class="copyright">
             <p>website by
