сетка главной страницы 1

--- a/index (2).html
+++ b/index (2).html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <header class="main-header">
+    <header class="main-header wrapper">
       <div class="logo" href="index.html">
         <img src="img/logo.png" width="138" height="70" alt="Sedona">
       </div>
@@ -30,11 +30,10 @@
     </header>
     <main>
       <div class="intro">
-        <img src="img/background-index.jpg" width="100%" alt="Welcome to Sedona"/>
       </div>
       <h1 class="main-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
 	  	<p>Рассмотрим 5 причин, по которым Седона круче чем Гранд каньон!</p>
-      <div class="benefits">
+      <div class="benefits clearfix">
         <div class="benefits-text">
           <h2 class="benefits-title">Настоящий городок</h2>
           <span>&ndash;1&ndash;</span>
@@ -58,7 +57,7 @@
             <p>Не только китайского, но и местного производства!</p>
           </div>
         </div>
-        <div class="benefits">
+        <div class="benefits clearfix">
           <div class="benefits-image">
             <img src="img/benefits-image-2.jpg" width="800" height="256" alt="Мост дьявола">
           </div>
@@ -84,7 +83,7 @@
         </div>
         <div class="benefits">
           <div class="feature-text">
-           <p class="feature-title">Мало туристов</p>
+           <h2 class="feature-title">Мало туристов</h2>
            <span class="feature-num">&ndash;&#8470;5&ndash;</span>
            <p class="feature-desc">Большинство едет в Гранд Каньон и толпится там</p>
           </div>
@@ -134,7 +133,7 @@
 						<button class="form-btn btn-search" type="submit">Найти</button>
 					  </form>
             </div>
-				<div class="footer-index">
+				<div class="footer-index clearfix">
 					<div class="hashtag">#visitsedona</div>
 					<div class="social">
             <a class="social-btn social-btn-tw" href="#"Твиттер</a>
