--- a/index.html
+++ b/index.html
@@ -30,20 +30,21 @@
     </header>
     <main>
       <div class="intro">
+        <img src="img/sedona-words.png" width="458" height="352" alt="Welcome Sedona">
       </div>
       <h1 class="main-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
 	  	<p>Рассмотрим 5 причин, по которым Седона круче чем Гранд каньон!</p>
       <div class="benefits clearfix">
         <div class="benefits-text">
           <h2 class="benefits-title">Настоящий городок</h2>
-          <span>&ndash;1&ndash;</span>
+          <span>&ndash;&#8470;1&ndash;</span>
           <p>Седона не атракцион для туристов, там течет своя жизнь</p>
         </div>
         <div class="benefits-image">
           <img src="img/benefits-image.jpg" width="800" height="256" alt="Настоящий городок">
         </div>
         </div>
-        <div class="features">
+        <div class="features clearfix">
           <div class="feautures-item">
             <h2 class="feautures-title feautures-title-house">Жилье</h2>
             <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
@@ -57,35 +58,31 @@
             <p>Не только китайского, но и местного производства!</p>
           </div>
         </div>
-        <div class="benefits clearfix">
-          <div class="benefits-image">
-            <img src="img/benefits-image-2.jpg" width="800" height="256" alt="Мост дьявола">
-          </div>
-          <div class="benefits-text">
-            <h2 class="benefits-title">Там есть мост дьявола</h2>
+        <div class="benefits-second clearfix">
+          <div class="benefits-second-text">
+            <h2 class="benefits-second-title">Там есть мост дьявола</h2>
             <span>&ndash;&#8470;2&ndash;</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
-        </div>
-        <div class="benefits">
-          <div class="feature-text">
-            <h2 class="feature-title">Небольшая площадь</h2>
-            <span class="feature-num">&ndash;&#8470;3&ndash;</span>
-            <p class="feature-desc">Все достопремечательности находятся очень близко</p>
+          <div class="benefits-second-image">
+            <img src="img/benefits-image-2.jpg" width="800" height="256" alt="Мост дьявола">
           </div>
         </div>
-        <div class="benefits">
-          <div class="feature-text">
-           <h2 class="feature-title">Красивая дорога</h2>
-           <span class="feature-num">&ndash;&#8470;4&ndash;</span>
-           <p class="feature-desc">Ехать в Седону из Лас-вегаса совсем не скучно!</p>
+        <div class="benefits benefits-gray-bg clearfix">
+          <div class="benefits-item">
+            <h2 class="benefits-title">Небольшая площадь</h2>
+            <span>&ndash;&#8470;3&ndash;</span>
+            <p>Все достопримечательности находятся очень близко</p>
           </div>
-        </div>
-        <div class="benefits">
-          <div class="feature-text">
-           <h2 class="feature-title">Мало туристов</h2>
-           <span class="feature-num">&ndash;&#8470;5&ndash;</span>
-           <p class="feature-desc">Большинство едет в Гранд Каньон и толпится там</p>
+          <div class="benefits-item">
+           <h2 class="benefits-title">Красивая дорога</h2>
+           <span >&ndash;&#8470;4&ndash;</span>
+           <p>Ехать в Седону из Лас-вегаса совсем не скучно!</p>
+          </div>
+          <div class="benefits-item">
+           <h2 class="benefits-title">Мало туристов</h2>
+           <span>&ndash;&#8470;5&ndash;</span>
+           <p>Большинство едет в Гранд Каньон и толпится там</p>
           </div>
           </div>
           <div class="offer">
@@ -95,7 +92,6 @@
 			    </div>
           <footer>
 			      <div class="map">
-              <img src="img/map.jpg" width="1200" height="593" alt="Карта">
             </div>
 					  <form class="hotel-search" action="/echo" method="get">
 						<div class="hotel-search-row">
