--- a/hotels.html
+++ b/hotels.html
@@ -7,9 +7,10 @@
 </head>
 <body>
   <div class="container">
-    <header class="main-header wrapper">
-      <a class="logo" href="index.html">
-            <img src="img/logo.png" width="138" height="70" alt="Sedona">
+    <header class="main-header">
+      <div class="logo" href="index.html">
+         <img src="img/logo.png" width="138" height="70" alt="Sedona">
+      </div>
       <nav class="main-nav">
         <ul>
           <li>
@@ -22,7 +23,7 @@
             <a href="#">Карта штата</a>
           </li>
           <li>
-            <a href="#">Гостиницы</a>
+            <a class="active" href="#">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -49,14 +50,15 @@
             <label for="apartments">Апартаменты</label>
           </div>
         <div class="filter-cost">
+          <b class="filter-cost-title">Стоимость в сутки (Р):</b>
           <label>от <input class="filter-field field-min" type="text" value="0"></label>
           <label>до <input class="filter-field field-max" type="text" value="3000"></label>
-        </div>
         <div class="range-controls">
           <div class="toggle min-toggle"></div>
           <div class="toggle max-toggle"></div>
         </div>
         <button type="submit" class="btn-filter">Показать</button>
+        </div>
       </form>
     </section>
         <div class="sort clearfix">
@@ -66,11 +68,12 @@
             <a href="#">По цене</a>
       		  <a href="#">По типу</a>
       		  <a href="#">По рейтингу</a>
-        </div>
+          </div>
       		<div class="sort-arrows">
       			<a href="#" class="icon-triangle icon-up"></a>
       			<a href="#" class="icon-triangle icon-down"></a>
       		</div>
+        </div>
       	</section>
       	<section class="hotels clearfix">
       			<article class="hotel-item clearfix">
@@ -93,8 +96,6 @@
                 <div class="hotel-rating-count">Рейтинг: 8,5</div>
       			  </div>
             </article>
-      		</section>
-      		<section class="hotels clearfix">
             <article class="hotel-item clearfix">
       			  <div class="hotel-image">
                 <img src="img/hotel-image-2.jpg" width="135" height="90" alt="Desert Quail Inn">
@@ -115,8 +116,6 @@
                   <div class="hotel-rating-count">Рейтинг: 8,9</div>
                 </div>
             </article>
-      		</section>
-      		<section class="hotels clearfix">
             <article class="hotel-item clearfix">
       			  <div class="hotel-image">
                 <img src="img/hotel-image-3.jpg" width="135" height="90" alt="Villas at Poco Diablo">
