--- a/hotels.html
+++ b/hotels.html
@@ -145,18 +145,17 @@
       	</main>
         <footer>
           <div class="footer-inner clearfix">
-            <div class="hashtag">#visitsedona</div>
-            <div class="social">
-              <a class="social-btn social-btn-tw" href="#">Твиттер</a>
-              <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-              <a class="social-btn social-btn-ytube" href="#">Ютуб</a>
+            <div class="hashtag">
+              <a href="#">#visitsedona</a>
+            </div>
+  					<div class="social">
+              <a class="social-btn social-btn-tw" href="#"></a>
+              <a class="social-btn social-btn-fb" href="#"></a>
+              <a class="social-btn social-btn-ytube" href="#"></a>
   					</div>
   					<div class="copyright">
-              <p>website by
-                <a href="#">
-                  <img src="img/icon-academy.png" width="113" height="39" alt="HTML-academy">
-                </a>
-              </p>
+              <span>Website by</span>
+            <a href="#" title="HTML-academy»"></a>
             </div>
           </div>
         </footer>
