--- a/index.html
+++ b/index.html
@@ -94,56 +94,46 @@
 			    </div>
         </main>
         <footer>
-			      <div class="map">
-            </div>
-					  <form class="hotel-search" action="/echo" method="get">
+					  <form class="hotel-search clearfix" action="/echo" method="get">
 						<div class="hotel-search-row clearfix">
-							<label for="ch1">Дата заезда: <i class="icon-calendar"></i></label>
-              <div class="filed-wrapper">
-                <input name="checkin" type="date" placeholder="24 апреля 2014" id="ch1"/>
-                <button class="icon-calendar"></button>
-              </div>
+              <label for="arrival">Дата заезда:</label>
+              <input type="text" name="arrival" id="arrival" placeholder="24 апреля 2017">
+              <button class="calendar-arrival"></button>
             </div>
 						<div class="hotel-search-row clearfix">
-              <label for="ch2">Дата выезда: <i class="icon-calendar"></i></label>
-              <div class="filed-wrapper">
-                <input name="checkout" type="date" placeholder="4 июля 2014" id="ch2"/>
-                <button class="icon-calendar"></button>
-              </div>
+              <label for="leaving">Дата выезда:</label>
+              <input type="text" name="leaving" id="leaving" placeholder="4 июля 2017">
+              <button class="calendar-leaving"></button>
             </div>
             <div class="hotel-search-row clearfix">
 						  <div class="field-wrapper-half">
-                <div class="hotel-search-number">
-								  <label for="ch3">Взрослые:</label>
-									<button class="btn-grey icon-minus" type="button"></button>
-									<input name="adults" type="text" value="2" id="ch3"/>
-									<button class="btn-grey icon-plus" type="button"></button>
-								</div>
+								  <label for="adult">Взрослые:</label>
+									<button class="btn-grey reduce-adult" type="button"></button>
+                  <button class="btn-grey add-adult" type="button"></button>
+									<input  type="text" name="adult" id="adult" placeholder="2"/>
 							</div>
               <div class="field-wrapper-half">
-                <div class="hotel-search-number">
-							    <label for="ch4">Дети:</label>
-								  <button class="btn icon-minus" type="button"></button>
-								  <input name="children" type="text" value="0" id="ch4"/>
-								  <button class="btn icon-plus" type="button"></button>
-							  </div>
-              </div>
-					  </div>
-						<button class="form-btn btn-search" type="submit">Найти</button>
+							    <label for="child">Дети:</label>
+								  <button class="btn-grey reduce-child" type="button"></button>
+								  <button class="btn-grey add-child" type="button"></button>
+                  <input type="text" name="child" id="child" placeholder="0"/>
+					    </div>
+            </div>
+						<button class="search-form-btn" type="submit">Найти</button>
 					  </form>
+            <div class="map"></div>
 				<div class="footer-index clearfix">
-					<div class="hashtag">#visitsedona</div>
+					<div class="hashtag">
+            <a href="#">#visitsedona</a>
+          </div>
 					<div class="social">
-            <a class="social-btn social-btn-tw" href="#">Твиттер</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-ytube" href="#">Ютуб</a>
+            <a class="social-btn social-btn-tw" href="#"></a>
+            <a class="social-btn social-btn-fb" href="#"></a>
+            <a class="social-btn social-btn-ytube" href="#"></a>
 					</div>
 					<div class="copyright">
-            <p>website by
-              <a href="#">
-                <img src="img/icon-academy.png" width="113" height="39" alt="HTML-academy">
-              </a>
-            </p>
+            <span>Website by</span>
+          <a href="#" title="HTML-academy»"></a>
           </div>
         </div>
 			</footer>
