проблемы с pixel perfect

--- a/hotels.html
+++ b/hotels.html
@@ -117,7 +117,7 @@
                   </div>
                 </div>
                 <div class="hotel-rating clearfix">
-      				    <div class="hotel-stars"></div>
+      				    <div class="hotel-stars second"></div>
                   <div class="hotel-rating-count">Рейтинг: 8,9</div>
                 </div>
             </article>
@@ -137,7 +137,7 @@
                 </div>
               </div>
       			  <div class="hotel-rating clearfix">
-      			  	<div class="hotel-stars"></div>
+      			  	<div class="hotel-stars third"></div>
                 <div class="hotel-rating-count">Рейтинг: 9,2</div>
               </div>
             </article>
