--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="intro">
         <img src="img/sedona-words.png" width="458" height="352" alt="Welcome Sedona">
       </div>
-      <h1 class="main-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
 	  	<p>Рассмотрим 5 причин, по которым Седона круче чем Гранд каньон!</p>
       <div class="benefits clearfix">
         <div class="benefits-text">
@@ -97,12 +97,12 @@
 					  <form class="hotel-search clearfix" action="/echo" method="get">
 						<div class="hotel-search-row clearfix">
               <label for="arrival">Дата заезда:</label>
-              <input type="text" name="arrival" id="arrival" placeholder="24 апреля 2017">
+              <input type="text" name="arrival" id="arrival" value="24 апреля 2017">
               <button class="calendar-arrival"></button>
             </div>
 						<div class="hotel-search-row clearfix">
               <label for="leaving">Дата выезда:</label>
-              <input type="text" name="leaving" id="leaving" placeholder="4 июля 2017">
+              <input type="text" name="leaving" id="leaving" value="4 июля 2017">
               <button class="calendar-leaving"></button>
             </div>
             <div class="hotel-search-row clearfix">
@@ -121,7 +121,9 @@
             </div>
 						<button class="search-form-btn" type="submit">Найти</button>
 					  </form>
-            <div class="map"></div>
+            <div class="map">
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26187.813531149823!2d-111.77668546283091!3d34.8693742791578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1493979550317" width="1200" height="593"></iframe
+            </div>
 				<div class="footer-index clearfix">
 					<div class="hashtag">
             <a href="#">#visitsedona</a>
@@ -138,5 +140,6 @@
         </div>
 			</footer>
 		</div>
+    <script src="js/script.js"></script>
 	</body>
 </html>
