--- a/hotels.html
+++ b/hotels.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Sedona</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -79,7 +81,6 @@
       			<a href="#" class="icon-triangle icon-down"></a>
       		</div>
         </div>
-      	</section>
       	<section class="hotels clearfix">
       			<article class="hotel-item clearfix">
               <div class="hotel-image">
