--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>Sedona</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <header class="main-header">
-      <div class="logo" href="index.html">
+      <a class="logo" href="index.html">
         <img src="img/logo.png" width="138" height="70" alt="Sedona">
-      </div>
+      </a>
       <nav class="main-nav">
         <ul>
           <li>
@@ -33,11 +35,11 @@
         <img src="img/sedona-words.png" width="458" height="352" alt="Welcome Sedona">
       </div>
       <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-	  	<p>Рассмотрим 5 причин, по которым Седона круче чем Гранд каньон!</p>
+	  	<p class="main-words">Рассмотрим 5 причин, по которым Седона круче чем Гранд каньон!</p>
       <div class="benefits clearfix">
         <div class="benefits-text">
           <h2 class="benefits-title">Настоящий городок</h2>
-          <span>&ndash;&#8470;1&ndash;</span>
+          <span>&mdash;&#8470;1&mdash;</span>
           <p>Седона не атракцион для туристов, там течет своя жизнь</p>
         </div>
         <div class="benefits-image">
@@ -60,8 +62,8 @@
         </div>
         <div class="benefits-second clearfix">
           <div class="benefits-second-text">
-            <h2 class="benefits-second-title">Там есть мост дьявола</h2>
-            <span>&ndash;&#8470;2&ndash;</span>
+            <h2 class="benefits-second-title">Там есть<br>мост дьявола</h2>
+            <span>&mdash;&#8470;2&mdash;</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
           <div class="benefits-second-image">
@@ -71,17 +73,17 @@
         <div class="benefits benefits-gray-bg clearfix">
           <div class="benefits-item">
             <h2 class="benefits-title">Небольшая площадь</h2>
-            <span>&ndash;&#8470;3&ndash;</span>
+            <span>&mdash;&#8470;3&mdash;</span>
             <p>Все достопримечательности находятся очень близко</p>
           </div>
           <div class="benefits-item">
            <h2 class="benefits-title">Красивая дорога</h2>
-           <span >&ndash;&#8470;4&ndash;</span>
+           <span >&mdash;&#8470;4&mdash;</span>
            <p>Ехать в Седону из Лас-вегаса совсем не скучно!</p>
           </div>
           <div class="benefits-item">
            <h2 class="benefits-title">Мало туристов</h2>
-           <span>&ndash;&#8470;5&ndash;</span>
+           <span>&mdash;&#8470;5&mdash;</span>
            <p>Большинство едет в Гранд Каньон и толпится там</p>
           </div>
           </div>
@@ -110,19 +112,19 @@
 								  <label for="adult">Взрослые:</label>
 									<button class="btn-grey reduce-adult" type="button"></button>
                   <button class="btn-grey add-adult" type="button"></button>
-									<input  type="text" name="adult" id="adult" placeholder="2"/>
+									<input  type="text" name="adult" id="adult" value="2"/>
 							</div>
               <div class="field-wrapper-half">
 							    <label for="child">Дети:</label>
 								  <button class="btn-grey reduce-child" type="button"></button>
 								  <button class="btn-grey add-child" type="button"></button>
-                  <input type="text" name="child" id="child" placeholder="0"/>
+                  <input type="text" name="child" id="child" value="0"/>
 					    </div>
             </div>
 						<button class="search-form-btn" type="submit">Найти</button>
 					  </form>
             <div class="map">
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26187.813531149823!2d-111.77668546283091!3d34.8693742791578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1493979550317" width="1200" height="593"></iframe
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26187.813531149823!2d-111.77668546283091!3d34.8693742791578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1493979550317" width="1200" height="593"></iframe>
             </div>
 				<div class="footer-index clearfix">
 					<div class="hashtag">
