--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>Sedona</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style-min.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <header class="main-header">
-      <a class="logo" href="index.html">
+      <a class="logo" href="#">
         <img src="img/logo.png" width="138" height="70" alt="Sedona">
       </a>
       <nav class="main-nav">
@@ -100,24 +100,24 @@
 						<div class="hotel-search-row clearfix">
               <label for="arrival">Дата заезда:</label>
               <input type="text" name="arrival" id="arrival" value="24 апреля 2017">
-              <button class="calendar-arrival"></button>
+              <button class="calendar-arrival" alt="Календарь"></button>
             </div>
 						<div class="hotel-search-row clearfix">
               <label for="leaving">Дата выезда:</label>
               <input type="text" name="leaving" id="leaving" value="4 июля 2017">
-              <button class="calendar-leaving"></button>
+              <button class="calendar-leaving" alt="Календарь"></button>
             </div>
             <div class="hotel-search-row clearfix">
 						  <div class="field-wrapper-half">
 								  <label for="adult">Взрослые:</label>
-									<button class="btn-grey reduce-adult" type="button"></button>
-                  <button class="btn-grey add-adult" type="button"></button>
+									<button class="btn-grey reduce-adult" type="button" alt="Уменишить"></button>
+                  <button class="btn-grey add-adult" type="button" alt="Увеличить"></button>
 									<input  type="text" name="adult" id="adult" value="2"/>
 							</div>
               <div class="field-wrapper-half">
 							    <label for="child">Дети:</label>
-								  <button class="btn-grey reduce-child" type="button"></button>
-								  <button class="btn-grey add-child" type="button"></button>
+								  <button class="btn-grey reduce-child" type="button" alt="Уменишить"></button>
+								  <button class="btn-grey add-child" type="button" alt="Увеличить"></button>
                   <input type="text" name="child" id="child" value="0"/>
 					    </div>
             </div>
@@ -131,17 +131,17 @@
             <a href="#">#visitsedona</a>
           </div>
 					<div class="social">
-            <a class="social-btn social-btn-tw" href="#"></a>
-            <a class="social-btn social-btn-fb" href="#"></a>
-            <a class="social-btn social-btn-ytube" href="#"></a>
+            <a class="social-btn social-btn-tw" href="#" alt="Twitter"></a>
+            <a class="social-btn social-btn-fb" href="#" alt="Facebook"></a>
+            <a class="social-btn social-btn-ytube" href="#" alt="Ytube"></a>
 					</div>
 					<div class="copyright">
             <span>Website by</span>
-          <a href="#" title="HTML-academy»"></a>
+          <a href="#" title="HTML-academy" alt="HTML-academy"></a>
           </div>
         </div>
 			</footer>
 		</div>
-    <script src="js/script.js"></script>
+    <script src="js/script-min.js"></script>
 	</body>
 </html>
