--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Sedona</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/normalize-min.css" rel="stylesheet">
   <link href="css/style-min.css" rel="stylesheet">
 </head>
 <body>
@@ -96,7 +96,7 @@
 			    </div>
         </main>
         <footer>
-					  <form class="hotel-search clearfix" action="/echo" method="get">
+					  <form class="hotel-search hotel-show clearfix" action="/echo" method="get">
 						<div class="hotel-search-row clearfix">
               <label for="arrival">Дата заезда:</label>
               <input type="text" name="arrival" id="arrival" value="24 апреля 2017">
