--- a/hotels.html
+++ b/hotels.html
@@ -146,9 +146,7 @@
       	</main>
         <footer>
           <div class="footer-inner clearfix">
-            <div class="hashtag">
-              <a href="#">#visitsedona</a>
-            </div>
+            <a class="hashtag" href="#">#visitsedona</a>
   					<div class="social">
               <a class="social-btn social-btn-tw" href="#"></a>
               <a class="social-btn social-btn-fb" href="#"></a>
