--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@
              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26187.813531149823!2d-111.77668546283091!3d34.8693742791578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1493979550317" width="1200" height="593"></iframe>
             </div>
 				<div class="footer-index clearfix">
-					<div class="hashtag">
-            <a href="#">#visitsedona</a>
-          </div>
+          <a class="hashtag" href="#">#visitsedona</a>
 					<div class="social">
             <a class="social-btn social-btn-tw" href="#"></a>
             <a class="social-btn social-btn-fb" href="#"></a>
